Adicionado mais feature para Notification, aviso de rejeição de vaga e trabalho ao usuário. Alinhado alguns recurso do projeto com as requisições do projeto. Agora no grupo tem postagem e comentário fechado para cada grupo. Endpoint novo para aluno verificar o diretorio que faz parte.